fixing spacing issues with bTI mobile view

--- a/styles/index.css
+++ b/styles/index.css
@@ -270,7 +270,7 @@ body {
     grid-column: 1/3;
     grid-row: 2/4;
     align-self: end;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 .bigTicket-text-btn {
@@ -285,7 +285,7 @@ body {
     border-radius: 15px;
     text-decoration: none;
 
-    margin-top: 2em;
+    margin-top: 3em;
 
     font-weight: 700;
 }
